First working version

--- a/dist.ini
+++ b/dist.ini
@@ -1,7 +1,21 @@
 name    = CPAN-Repository
-author  = Torsten Raudssus <torsten@raudssus.de>
+author  = Torsten Raudssus <torsten@raudss.us> L<http://raudss.us/>
 license = Perl_5
-copyright_holder = Torsten Raudssus
+copyright_holder = DuckDuckGo, Inc. L<http://duckduckgo.com/>
 copyright_year   = 2012
 
 [@GETTY]
+
+[Prereqs]
+Moo = 0.009013
+File::Path = 2.08
+IO::Zlib = 1.10
+IO::File = 1.25
+PathTools = 3.33
+Dist::Data = 0.002
+utf8::all = 0
+DateTime = 0.72
+
+[Prereqs / TestRequires]
+Test::More = 0.90
+File::Temp = 0.22
