--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,7 @@ Moo = 0.009013
 File::Path = 2.08
 IO::Zlib = 1.10
 IO::File = 1.25
-PathTools = 3.33
+File::Spec::Functions = 3.33
 Dist::Data = 0.002
 utf8::all = 0
 DateTime = 0.72
