--- a/dist.ini
+++ b/dist.ini
@@ -4,7 +4,7 @@ license = Perl_5
 copyright_holder = DuckDuckGo, Inc. L<http://duckduckgo.com/>
 copyright_year   = 2012
 
-[@GETTY]
+[@Author::GETTY]
 
 [Prereqs]
 Moo = 0.009013
@@ -13,7 +13,6 @@ IO::Zlib = 1.10
 IO::File = 1.14
 File::Spec::Functions = 3.33
 Dist::Data = 0.002
-utf8::all = 0
 DateTime = 0.72
 DateTime::Format::RFC3339 = 0
 DateTime::Format::Epoch = 0.13
