Ensure CPAN::Repository always has a $VERSION

--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,11 @@ copyright_year   = 2012
 
 [@Author::GETTY]
 
+;[@Filter]
+;-bundle = @Author::GETTY
+;-remove = Git::NextVersion
+;-remove = PkgVersion
+
 [Prereqs]
 Moo = 0.009013
 File::Path = 2.08
@@ -20,3 +25,6 @@ DateTime::Format::Epoch = 0.13
 [Prereqs / TestRequires]
 Test::More = 0.90
 File::Temp = 0.22
+
+;[RewriteVersion]
+;[BumpVersionAfterRelease]
