Convert to OALDERS dzil author bundle

--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,12 @@ license = Perl_5
 copyright_holder = DuckDuckGo, Inc. L<http://duckduckgo.com/>
 copyright_year   = 2012
 
-[@Author::GETTY]
+[@Author::OALDERS]
 
-;[@Filter]
-;-bundle = @Author::GETTY
-;-remove = Git::NextVersion
-;-remove = PkgVersion
+-remove = MinimumPerl
+-remove = Test::Perl::Critic
+-remove = Test::PodSpelling
+-remove = PodCoverageTests
 
 [Prereqs]
 Moo = 0.009013
@@ -26,5 +26,8 @@ DateTime::Format::Epoch = 0.13
 Test::More = 0.90
 File::Temp = 0.22
 
-;[RewriteVersion]
-;[BumpVersionAfterRelease]
+[Encoding]
+encoding = bytes
+filename = t/data/My-Other-Sample-0.001.tar.gz
+filename = t/data/My-Sample-Distribution-0.003.tar.gz
+filename = t/data/My-Sample-Distribution-0.004.tar.gz
